--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <module>cloud_eureka_server_7002</module>
         <module>cloud-provider-payment8001</module>
         <module>cloud-provider-payment8002</module>
+        <module>cloud-providerconsul-payment8006</module>
+        <module>cloud-providerconsul-payment8006</module>
+        <module>cloud-consumerconsul-order80</module>
     </modules>
 
     <!--统一管理jar包版本-->
