--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>cloud-providerconsul-payment8006</module>
         <module>cloud-providerconsul-payment8006</module>
         <module>cloud-consumerconsul-order80</module>
+        <module>cloud_consumer_feign_order80</module>
     </modules>
 
     <!--统一管理jar包版本-->
