--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>cloud_consumer_feign_order80</module>
         <module>cloud_provider_hystrix_payment8001</module>
         <module>cloud_provider_hystrix_payment8011</module>
+        <module>cloud_consumer_feign_hystrix_order80</module>
     </modules>
 
     <!--统一管理jar包版本-->
