--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>cloud_provider_hystrix_payment8011</module>
         <module>cloud_consumer_feign_hystrix_order80</module>
         <module>cloud_gateway_gateway9527</module>
+        <module>cloud_config_center3344</module>
     </modules>
 
     <!--统一管理jar包版本-->
