--- a/cloud_config_center3344/pom.xml
+++ b/cloud_config_center3344/pom.xml
@@ -12,10 +12,13 @@
     <artifactId>cloud_config_center3344</artifactId>
 
     <dependencies>
+        <!-- SpringCloud Config 配置 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
+
         <!--        引入自定义抽取出来的api通用包，可以使用Payment 等一些分布式模块总公共资源-->
         <dependency>
             <groupId>com.atguigu.springcloud</groupId>
