成功集成 spring config server和client 模块，并测试成功；但目前该版本有一个亟待解决的问题：github上的 config-*.yml 配置文件信息发生变更的时候，通过 config client 去访问不能得到最新的 config-*.yml 配置信息

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>cloud_consumer_feign_hystrix_order80</module>
         <module>cloud_gateway_gateway9527</module>
         <module>cloud_config_center3344</module>
+        <module>cloud_config_client_3355</module>
     </modules>
 
     <!--统一管理jar包版本-->
