--- a/cloud_config_client_3355/pom.xml
+++ b/cloud_config_client_3355/pom.xml
@@ -9,13 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud_config_center3344</artifactId>
+    <artifactId>cloud_config_client_3355</artifactId>
 
     <dependencies>
-        <!-- SpringCloud Config 配置 -->
+        <!-- SpringCloud Config client配置：注意这里和 config3344模块 引入的依赖不同 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <artifactId>spring-cloud-starter-config</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
 
@@ -60,5 +60,4 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
-
 </project>
