--- a/cloud_config_client_3355/pom.xml
+++ b/cloud_config_client_3355/pom.xml
@@ -12,13 +12,17 @@
     <artifactId>cloud_config_client_3355</artifactId>
 
     <dependencies>
+        <!--监控:用来实现 config 配置信息动态更新的，这个功能模块要配合spring-boot-starter-web一起使用-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!-- SpringCloud Config client配置：注意这里和 config3344模块 引入的依赖不同 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
-
         <!--        引入自定义抽取出来的api通用包，可以使用Payment 等一些分布式模块总公共资源-->
         <dependency>
             <groupId>com.atguigu.springcloud</groupId>
@@ -28,11 +32,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!--监控-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
