集成测试完成spring bus aqmp 功能：成功实现修改一处配置文件，即config server 3344配置服务应用处的配置文件，然后通过广播使得微服务中其它通过rabbitmq订阅了config server服务的配置文件也得以刷新

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>cloud_gateway_gateway9527</module>
         <module>cloud_config_center3344</module>
         <module>cloud_config_client_3355</module>
+        <module>cloud_config_client_3366</module>
     </modules>
 
     <!--统一管理jar包版本-->
