--- a/cloud_config_client_3366/pom.xml
+++ b/cloud_config_client_3366/pom.xml
@@ -9,22 +9,26 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud_config_center3344</artifactId>
+    <artifactId>cloud_config_client_3366</artifactId>
 
     <dependencies>
-        <!-- bus 总线 + rabbitmq，主要用来做精准配置更新 -->
+        <!-- bus 总线，主要用来做精准配置更新 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
-        <!-- SpringCloud Config 配置 -->
+        <!--监控:用来实现 config 配置信息动态更新的，这个功能模块要配合spring-boot-starter-web一起使用-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!-- SpringCloud Config client配置：注意这里和 config3344模块 引入的依赖不同 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <artifactId>spring-cloud-starter-config</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
-
         <!--        引入自定义抽取出来的api通用包，可以使用Payment 等一些分布式模块总公共资源-->
         <dependency>
             <groupId>com.atguigu.springcloud</groupId>
@@ -34,11 +38,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!--监控-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -66,5 +65,4 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
-
 </project>
