--- a/cloud-consumer-order80/pom.xml
+++ b/cloud-consumer-order80/pom.xml
@@ -12,16 +12,12 @@
     <artifactId>cloud-consumer-order80</artifactId>
 
     <dependencies>
-        <!-- 包含了sleuth zipkin 数据链路追踪-->
-        <!--<dependency>
+        <!-- 包含了sleuth+zipkin 数据链路追踪-->
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
-        <dependency>&lt;!&ndash; 引用自己定义的api通用包，可以使用Payment支付Entity &ndash;&gt;
-            <groupId>com.eiletxie.springcloud</groupId>
-            <artifactId>cloud-api-commons</artifactId>
-            <version>${project.version}</version>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
