--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -12,7 +12,12 @@
     <artifactId>cloud-provider-payment8001</artifactId>
 
     <dependencies>
-        <!-- 包含了sleuth zipkin 数据链路追踪-->
+        <!-- 包含了sleuth+zipkin 数据链路追踪-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency>
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
