--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>cloud_alibaba_provider_payment9002</module>
         <module>cloud_alibaba_consumer_nacos_order83</module>
         <module>cloud_alibaba_nacos_client3377</module>
+        <module>cloud_alibaba_sentinel_service8401</module>
     </modules>
 
     <!--统一管理jar包版本-->
